removed stle from body tag

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <title>Registration form</title>
     </head>
-    <body style="background-color: rgb(238, 161, 161);">
+    <body >
     <div  align="center" : style="background-color: rgb(181, 198, 199); margin-left: 50px;margin-right: 50px;  >
         <h1 style="color: rgb(9, 2, 73);"><b style="font-size: 36px;">Form Demo</b></h1>
       
